--- a/app/css/main.css
+++ b/app/css/main.css
@@ -423,18 +423,61 @@ template {
   font-weight: normal;
   font-style: normal; }
 
+@font-face {
+  font-family: "RobotoRegular";
+  src: url("../fonts/RobotoRegular/RobotoRegular.eot");
+  src: url("../fonts/RobotoRegular/RobotoRegular.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoRegular/RobotoRegular.woff") format("woff"), url("../fonts/RobotoRegular/RobotoRegular.ttf") format("truetype");
+  font-style: normal;
+  font-weight: normal; }
+
+/* overlay at start */
+.mfp-fade.mfp-bg {
+  opacity: 0;
+  transition: all 0.25s ease-out; }
+
+/* overlay animate in */
+.mfp-fade.mfp-bg.mfp-ready {
+  opacity: 0.8; }
+
+/* overlay animate out */
+.mfp-fade.mfp-bg.mfp-removing {
+  opacity: 0; }
+
+/* content at start */
+.mfp-fade.mfp-wrap .mfp-content {
+  transform: translateY(50px);
+  opacity: 0;
+  transition: all 0.25s ease-out; }
+
+/* content animate it */
+.mfp-fade.mfp-wrap.mfp-ready .mfp-content {
+  opacity: 1;
+  transform: translateY(0px); }
+
+/* content animate out */
+.mfp-fade.mfp-wrap.mfp-removing .mfp-content {
+  opacity: 0;
+  transform: translateY(50px); }
+
 *,
 *:before,
 *:after {
   box-sizing: border-box; }
 
-html, body {
-  width: 100%; }
-
 body {
   font-family: "Geometria Regular";
+  width: 100%;
   color: #000;
-  font-size: 20px; }
+  font-size: 20px;
+  position: relative; }
+
+button {
+  background: #ea5798;
+  border: none;
+  padding: 13px 19px;
+  font-family: "Geometria Regular";
+  font-size: 22px;
+  color: #fff; }
 
 .clearfix:after {
   content: "";
@@ -442,6 +485,11 @@ body {
   clear: both; }
 
 /* FIRST SCREEN STYLES */
+#header-main {
+  position: relative;
+  border-bottom: 2px solid #3b3b3b;
+  z-index: 5; }
+
 .login-search-row {
   height: 40px;
   background-color: #3b3b3b;
@@ -471,11 +519,15 @@ body {
 .header-menu-line {
   display: flex;
   justify-content: space-between;
-  padding: 30px 6% 22px 6%; }
+  align-items: flex-end;
+  padding: 30px 6% 14px 6%; }
   .header-menu-line a {
     color: #000;
     text-decoration: none;
     outline: none; }
+
+.logo-wrap {
+  max-height: 46px; }
 
 .logo {
   font-family: 'Megrim';
@@ -484,7 +536,8 @@ body {
   text-transform: uppercase; }
 
 .header-menu-links {
-  display: flex; }
+  display: flex;
+  margin: 0; }
   .header-menu-links li {
     display: block;
     list-style-type: none;
@@ -518,7 +571,9 @@ body {
   .nav-img-half-col img {
     width: 100%;
     height: 100%;
-    border: solid 2px #626262; }
+    border-bottom: solid 2px #626262;
+    border-right: solid 2px #626262;
+    border-left: solid 2px #626262; }
 
 .nav-img-half-row {
   width: 100%;
@@ -527,6 +582,27 @@ body {
   .nav-img-half-row a {
     width: 50%; }
 
+.nav-img-half-row > img {
+  border-top: solid 2px #626262; }
+
+/* HEADER DROPDOWN */
+.header-drop-down {
+  position: absolute;
+  top: calc(100% + 2px);
+  left: 0;
+  background: #f8f8f8;
+  opacity: 0.95;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 9.6% 33px 9.6%; }
+  .header-drop-down .drop-down-el {
+    padding: 33px 20px 0 20px;
+    font-size: 18px;
+    text-align: center;
+    flex-grow: 1; }
+
+/* HEADER DROPDOWN END */
 /* END FIRST SCREEN */
 /* GENERAL */
 .heading {
@@ -535,6 +611,7 @@ body {
   width: 100%;
   font-family: "Helvetica Neue Cyr Roman";
   font-size: 36px;
+  font-weight: normal;
   letter-spacing: 1.8px;
   text-align: center;
   color: #333; }
@@ -630,7 +707,8 @@ p {
 .brand-preview-slide {
   justify-content: center;
   align-items: center;
-  outline: none; }
+  outline: none;
+  cursor: pointer; }
   .brand-preview-slide:before, .brand-preview-slide:after {
     content: '';
     display: block;
@@ -792,9 +870,6 @@ p {
     width: 24px;
     height: 24px; }
 
-.footer-main-technical {
-  display: none; }
-
 /* FOOTER END */
 .test-slider img {
   width: 220px;
@@ -806,3 +881,408 @@ p {
     height: auto;
     align-items: center;
     justify-content: center; }
+
+/* CALL POPUP */
+.open-call-popup {
+  width: 6.35%;
+  height: auto;
+  position: fixed;
+  bottom: 4%;
+  right: 4%; }
+
+#call-popup {
+  position: relative;
+  background: #FFF;
+  padding: 20px;
+  max-width: 700px;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center; }
+  #call-popup form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%; }
+  #call-popup input, #call-popup textarea {
+    width: 70%;
+    font-family: "Geometria Regular";
+    font-size: 16px;
+    padding: 9px 11px;
+    outline: none;
+    border: 2px solid #484848;
+    margin-bottom: 27px; }
+  #call-popup textarea {
+    resize: none; }
+  #call-popup p {
+    margin: 0;
+    font-size: 24px;
+    line-height: 1.5; }
+    #call-popup p:nth-child(2) {
+      margin-bottom: 27px; }
+  #call-popup .mfp-close {
+    font-size: 40px; }
+
+.footer-main-technical {
+  width: 100%; }
+
+/* CALL POPUP END */
+/* CATALOG */
+/* FIRST SCREEN */
+.common-main {
+  width: 100%;
+  padding: 15px 5.8% 40px 5.8%;
+  min-height: 100vh; }
+
+.catalog-links {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 9.6% 5px 9.6%; }
+  .catalog-links .catalog-link {
+    padding: 33px 20px 0 20px;
+    font-size: 18px;
+    text-align: center;
+    flex-grow: 1; }
+    .catalog-links .catalog-link a {
+      text-decoration: none;
+      color: #333;
+      outline: none; }
+
+/* breadcrumbs */
+.breadcrumbs {
+  display: block;
+  margin: 0;
+  padding: 0; }
+  .breadcrumbs a, .breadcrumbs li {
+    font-family: "Geometria Regular";
+    font-size: 14px;
+    color: #666;
+    text-decoration: none; }
+  .breadcrumbs li {
+    list-style: none;
+    display: inline; }
+
+/* breadcrumbs end */
+.catalog-description {
+  display: block;
+  width: 100%;
+  margin: 18px 0;
+  padding: 0;
+  font-family: "RobotoRegular";
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  font-size: 24px;
+  letter-spacing: 4.6px;
+  text-align: center;
+  color: #333333; }
+
+.cat-wrap {
+  display: flex; }
+
+/* FILTERS */
+.sub-cat-name-wrap {
+  width: 100%;
+  border-bottom: 4px solid #2e7996;
+  margin-bottom: 20px; }
+
+.sub-cat-name {
+  font-size: 24px;
+  font-weight: 500;
+  color: #2e7996;
+  letter-spacing: 1.2px; }
+
+.sorting-form {
+  float: right;
+  font-family: "Geometria Regular";
+  font-size: 14px;
+  letter-spacing: 0.7px;
+  color: #666;
+  position: relative;
+  margin-top: 4px; }
+  .sorting-form:after {
+    content: '';
+    display: block;
+    width: 15px;
+    height: 15px;
+    background: url(../img/sublist_arrow.svg);
+    transform: rotate(90deg);
+    position: absolute;
+    bottom: 3px;
+    right: 5px; }
+  .sorting-form .select-hidden {
+    font-family: "Geometria Regular";
+    font-size: 14px;
+    letter-spacing: 0.7px;
+    padding: 3px 30px 3px 0; }
+
+.select-hidden {
+  display: none; }
+
+.select-styled {
+  user-select: none;
+  cursor: pointer;
+  padding: 3px 30px 3px 0;
+  background: #fff;
+  z-index: 10; }
+  .select-styled.select-open {
+    border: 1px solid #666; }
+
+.select-options {
+  cursor: pointer;
+  user-select: none;
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: #fff;
+  line-height: 1.5;
+  border: 1px solid #666;
+  border-top: none;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+  .select-options li:hover {
+    background: #ddd; }
+
+/* CHECKBOX STYLINGS */
+.catalog-filters {
+  width: 230px;
+  flex-basis: 230px;
+  flex-shrink: 0; }
+
+.checkbox-filters .checkbox-wrap:last-child {
+  margin-top: 21px; }
+
+.checkbox-trigger {
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  padding-left: 25px;
+  margin-right: 15px;
+  font-size: 14px;
+  color: #666666;
+  letter-spacing: 0.6px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none; }
+
+.checkbox-trigger:before {
+  content: "";
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  margin-right: 9px;
+  position: absolute;
+  left: 0;
+  bottom: 1px;
+  border: 1px solid #666;
+  border-radius: 3px; }
+
+.checkbox:checked + .checkbox-trigger:before {
+  content: "\2713";
+  font-size: 15px;
+  color: #666;
+  text-align: center;
+  line-height: 15px; }
+
+.checkbox {
+  display: none; }
+
+/* CHECKBOX STYLINGS END */
+/* DROPDOWN FILTERS */
+.dropdown-filter {
+  display: flex;
+  flex-direction: column;
+  margin-top: 38px; }
+
+.filter-content {
+  height: 330px; }
+
+.filter-name-wrap {
+  padding-right: 15px;
+  border-bottom: 1px solid #444;
+  margin-bottom: 20px;
+  position: relative;
+  cursor: pointer; }
+  .filter-name-wrap:after {
+    content: '';
+    display: block;
+    width: 15px;
+    height: 15px;
+    background: url(../img/sublist_arrow.svg);
+    transform: rotate(-90deg);
+    position: absolute;
+    bottom: 2px;
+    right: 1px;
+    transition: all .4s; }
+  .filter-name-wrap.filter-open:after {
+    transform: rotate(-270deg); }
+
+.filter-name {
+  font-family: "Geometria Medium";
+  font-size: 20px;
+  line-height: 1.2;
+  color: #333; }
+
+.filter-search input {
+  font-size: 12px;
+  border: solid 1px #a0a0a0;
+  padding: 9px;
+  width: 100%;
+  outline: none; }
+
+.filter-content {
+  margin: 25px 0 0 0;
+  padding: 0 0 0 5px;
+  font-size: 14px;
+  color: #333;
+  letter-spacing: 0.7px;
+  line-height: 24px; }
+  .filter-content .mCSB_scrollTools {
+    width: 5px; }
+
+/* DROPDOWN FILTERS END */
+/* FILTERS END */
+.cat-content-wrap {
+  flex-grow: 1;
+  padding-left: 47px; }
+
+.pagination {
+  list-style: none;
+  font-size: 16px;
+  display: flex;
+  justify-content: flex-end;
+  margin: 0;
+  padding: 0; }
+  .pagination li {
+    margin-left: 10px; }
+  .pagination a {
+    color: #666;
+    text-decoration: none; }
+
+.cat-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 -30px 50px -30px; }
+
+.cat-product {
+  width: 180px;
+  max-width: 180px;
+  text-align: center;
+  flex-basis: 180px;
+  margin: 0 30px; }
+  .cat-product img {
+    max-width: 100%;
+    height: auto; }
+  .cat-product a {
+    outline: none;
+    text-decoration: none;
+    color: #010101;
+    display: flex;
+    flex-direction: column;
+    height: 100%; }
+
+.cat-product-img-wrap {
+  height: 210px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .cat-product-img-wrap img {
+    max-height: 210px;
+    max-width: 100%; }
+
+.cat-product-info {
+  margin-bottom: 15px;
+  flex-grow: 1; }
+
+.cat-product-name {
+  font-family: "Geometria Medium";
+  font-size: 18px;
+  color: #333;
+  margin-top: 30px;
+  margin-bottom: 13px; }
+
+.cat-product-description {
+  font-size: 14px; }
+
+.cat-product-price {
+  font-family: "Geometria Medium";
+  font-size: 22px;
+  color: #5894ab; }
+
+.cat-buy-btn {
+  margin-top: 14px;
+  width: 100%; }
+
+/* FIRST SCREEN END */
+/* CATALOG END */
+/* CONTACT PAGE */
+.contact {
+  margin-top: 16px; }
+  .contact p {
+    margin: 22px 0;
+    font-size: 20px; }
+  .contact .city {
+    font-family: "Geometria Medium";
+    font-size: 24px;
+    font-weight: 500;
+    letter-spacing: 1.2px;
+    color: #333; }
+  .contact .phones span {
+    vertical-align: top; }
+  .contact .phones span:last-child {
+    display: inline-block;
+    text-align: center; }
+    .contact .phones span:last-child a {
+      display: block;
+      text-decoration: none;
+      outline: none;
+      color: #333; }
+
+.map-wrap {
+  height: 80vh; }
+
+/* CONTACT PAGE END */
+/* ARTICLES PAGE */
+.articles-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0 -2.6%; }
+  .articles-list .article {
+    width: 28%;
+    margin: 50px 2.6% 0 2.6%; }
+  .articles-list img {
+    max-width: 100%; }
+  .articles-list a {
+    text-decoration: none;
+    outline: none; }
+
+.article-name {
+  font-size: 24px;
+  letter-spacing: 1.2px;
+  color: #333;
+  margin: 15px 0; }
+
+.article-description {
+  font-size: 14px;
+  letter-spacing: 0.7px;
+  color: #555;
+  line-height: 1.5; }
+
+.article-date {
+  font-size: 12px;
+  color: #777;
+  margin-top: 20px; }
+
+/* ARTICLES PAGE END*/
