--- a/app/sass/_popup.sass
+++ b/app/sass/_popup.sass
@@ -1,7 +1,7 @@
 /* overlay at start */
 .mfp-fade.mfp-bg
 	opacity: 0
-	transition: all 0.5s ease-out
+	transition: all 0.25s ease-out
 /* overlay animate in */
 .mfp-fade.mfp-bg.mfp-ready
 	opacity: 0.8
@@ -11,14 +11,14 @@
 
 /* content at start */
 .mfp-fade.mfp-wrap .mfp-content
-	transform: scale(0)
+	transform: translateY(50px)
 	opacity: 0
-	transition: all 0.5s ease-out
+	transition: all 0.25s ease-out
 /* content animate it */
 .mfp-fade.mfp-wrap.mfp-ready .mfp-content
 	opacity: 1
-	transform: scale(1)
+	transform: translateY(0px)
 /* content animate out */
 .mfp-fade.mfp-wrap.mfp-removing .mfp-content
 	opacity: 0
-	transform: scale(.5)
+	transform: translateY(50px)
