--- a/app/sass/libs.sass
+++ b/app/sass/libs.sass
@@ -1,2 +1,3 @@
 @import "app/libs/magnific-popup/dist/magnific-popup";
 @import "app/libs/slick-carousel/slick/slick";
+@import "app/libs/malihu-custom-scrollbar-plugin/scrollbar";
