articles, contacts mobile, cart price fix

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1460,7 +1460,8 @@ input::-webkit-inner-spin-button {
   padding: 25px 40px 0 40px; }
 
 .goToOrder-wrap {
-  text-align: center; }
+  text-align: center;
+  margin-top: 40px; }
 
 /* CART POPUP END*/
 /* MEDIUM */
@@ -1481,7 +1482,8 @@ input::-webkit-inner-spin-button {
 @media (max-width: 970px) {
   .header-menu-line {
     position: relative; }
-  .header-menu-links {
+  .header-menu-links,
+  .catalog-links {
     display: none; }
   .header-menu-links-wrap {
     order: 3; }
@@ -1496,12 +1498,12 @@ input::-webkit-inner-spin-button {
     position: absolute;
     top: 0;
     right: 6%;
+    left: 6%;
     padding: 0px 50px 0px 39px;
     overflow: hidden;
     display: block;
     opacity: 0;
-    transition: max-height 1s, opacity 0s 0.75s;
-    left: 6%; }
+    transition: max-height 1s, opacity 0s 0.75s; }
     .header-menu-links-wrap .header-menu-links li {
       margin: 37px 0; }
       .header-menu-links-wrap .header-menu-links li:first-child {
@@ -1539,7 +1541,20 @@ input::-webkit-inner-spin-button {
     font-size: 24px;
     letter-spacing: 1.2px; }
   .our-advantages {
-    text-align: center; } }
+    text-align: center; }
+  .heading {
+    font-size: 24px; }
+  .article-name {
+    font-size: 18px;
+    letter-spacing: 0.9px; }
+  .articles-list .article {
+    width: 44%; }
+  .contact .city {
+    font-size: 18px; }
+  .contact p {
+    font-size: 16px; }
+  .breadcrumbs + .heading {
+    margin-top: 25px; } }
 
 /* EXTRA SMALL-SMALL */
 /* EXTRA SMALL */
@@ -1560,7 +1575,12 @@ input::-webkit-inner-spin-button {
   .phone-footer {
     display: none; }
   .footer-main-inner {
-    justify-content: center; } }
+    justify-content: center; }
+  .breadcrumbs a,
+  .breadcrumbs li {
+    font-size: 12px; }
+  .articles-list .article {
+    width: 94.8%; } }
 
 @media (min-width: 512px) and (max-width: 650px) {
   .header-menu-line .logo-wrap {
