--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1040,6 +1040,7 @@ input::-webkit-inner-spin-button
 	padding: 25px 40px 0 40px
 .goToOrder-wrap
 	text-align: center
+	margin-top: 40px
 /* CART POPUP END*/
 
 @import "media";
